Improve CE workflow and role-based queues
